--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <link rev="canonical" rel="self alternate shorter shorturl shortlink"
       href="<%= @short_url %>" />
   <% end %>
-  <title><%= @title.present? ? "#{@title} | Lobsters" : "Lobsters" %></title>
+  <title><%= @title.present? ? "#{@title} | Antinews" : "Antinews" %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -30,10 +30,10 @@
         [ 255, (@traffic * 7).floor + 50.0 ].min, 0, 0) %>;" href="/"
         title="Lobsters (<%= @traffic.to_i %>)"></a>
 
-        <% links = { "/" => "Home", "/newest" => "Newest Stories" } %>
+        <% links = { "/newest" => "New" } %>
         <% if @user %>
-          <% links.merge!({ "/threads" => "Your Threads",
-            "/stories/new" => "Submit Story" }) %>
+          <% links.merge!({ "/threads" => "Threads",
+            "/stories/new" => "Submit" }) %>
         <% end %>
         <% links.merge!({ "/search" => "Search" }) %>
 
