--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,19 +23,15 @@
   <% end %>
 </head>
 <body>
-  <div id="wrapper">
-    <div id="header">
+  <div id="header-wrapper">
+<div id="header">
       <div id="headerleft">
-        <a id="l_holder" style="background-color: #<%= sprintf("%02x%02x%02x",
-        [ 255, (@traffic * 7).floor + 50.0 ].min, 0, 0) %>;" href="/"
-        title="Lobsters (<%= @traffic.to_i %>)"></a>
-
         <% links = { "/newest" => "New" } %>
         <% if @user %>
           <% links.merge!({ "/threads" => "Threads",
             "/stories/new" => "Submit" }) %>
         <% end %>
-        <% links.merge!({ "/search" => "Search" }) %>
+        <%# links.merge!({ "/search" => "Search" }) %>
 
         <% if @cur_url.present? && !links.keys.include?(@cur_url) &&
         @heading.present? %>
@@ -45,6 +41,7 @@
         <% end %>
 
         <span class="headerlinks">
+          <%= link_to "Antinews", root_path, class: "brand" %>
           <% links.each do |u,v| %>
             <a href="<%= u %>" <%= u == @cur_url ? raw("class=\"cur_url\"") :
               "" %>><%= v %></a>
@@ -77,7 +74,8 @@
 
       <div class="clear"></div>
     </div>
-  
+  </div>
+  <div id="wrapper">
     <div id="inside">
       <% if flash[:error] %>
         <div class="flash-error"><%= flash[:error] %></div>
@@ -86,6 +84,15 @@
       <% end %>
 
       <%= yield %>
+    </div>
+
+    <div id="footer">
+      <div id="footer-left">
+        <%= link_to "About", about_path %> • <%= link_to "Guidelines", guidelines_path %>
+      </div>
+      <div id="footer-right">
+        <a href="http://nushackers.org">NUS Hackers</a>
+      </div>
     </div>
   </div>
 </body>
