--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -18,17 +18,17 @@
           <div id="story_guidelines" style="<%= @user &&
           @user.stories_submitted_count > 2 ? "display: none;" : "" %>">
             <div style="float: right;">
-            <a href="javascript:window.location=%22http://lobste.rs/stories/new?url=%22+encodeURIComponent(document.location)+%22&title=%22+encodeURIComponent(document.title)"
+            <a href="javascript:window.location=%22http://antinews.nushackers.org/stories/new?url=%22+encodeURIComponent(document.location)+%22&title=%22+encodeURIComponent(document.title)"
             style="border: 1px solid #ddd; padding: 0.5em; background-color:
             #f8f8f8; line-height: 1.5em; margin-left: 1em;">Submit to
-            Lobste.rs</a>
+            Antinews</a>
             </div>
             <ul>
             
             <li>
             <p>
             To be able to easily submit a page you're viewing in your browser
-            to Lobsters, drag the bookmarklet to the right to your bookmark
+            to Antinews, drag the bookmarklet to the right to your bookmark
             bar.  You'll be taken to this page with the viewed page's URL and
             title.
             </p>
