Minor update to about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -22,5 +22,5 @@
 <h3>Colophon</h3>
 <p>This site is powered by Ruby on Rails and is built on top of the Lobsters codebase.</p><br/>
 <hr/>
-<p><sup>[1]</sup> That is interesting to hackers. Naturally.</p>
+<p><sup>[1]</sup> We're talking about knowledge that is interesting to hackers, naturally.</p>
 </div>
