--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -23,15 +23,10 @@
   <div class="boxline" style="margin-bottom: 2px;">
 	<%= f.label :tags_a, "Tags:", :class => "required",
     :style => "line-height: 2.3em;" %>
-  <%= f.select "tags_a", options_for_select(
-    Tag.all_with_filtered_counts_for(@user).map{|t|
-    [ "#{t.tag} - #{t.description}", t.tag, { "data-html" => raw("<strong>") +
-      t.tag + raw("</strong> - ") + t.description.to_s +
-      (t.filtered_count == 0 ? "" :
-      raw(" <em>") + "#{t.filtered_count} user" +
-      (t.filtered_count == 1 ? "" : "s") + " filtering" +
-      raw("</em>")) } ]}, f.object.tags_a), {}, { :multiple => true } %>
-  </div>
+  <%= f.select "tags_a", Tag.order(:tag).map{|t|
+    [ "#{t.tag} - #{t.description}", t.tag ] }, {},
+    { :multiple => true } %>
+   </div>
 
   <div class="boxline">
     <%= f.label :description, "Text:", :class => "required" %>
