--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -216,6 +216,7 @@ $(document).ready(function() {
     
     box.html($("#comment_form").clone());
     box.find("ol").remove();
+    box.find(".learning_summary_checkbox").remove();
 
     box.find("button.comment-preview").after("&nbsp;\n&nbsp;<button class=\"comment-cancel\" name=\"button\" type=\"button\">Cancel</button>");
 
