--- a/app/views/comments/_commentbox.html.erb
+++ b/app/views/comments/_commentbox.html.erb
@@ -13,7 +13,7 @@
   <div style="width: 100%;">
     <%= text_area_tag "comment", comment.comment, :rows => 5,
       :style => "width: 100%;", :autocomplete => "off" %>
-
+    
     <p></p>
 
     <div class="markdown_help_toggler">
@@ -26,7 +26,12 @@
       &nbsp;
       <%= button_tag "Preview Comment", :class => "comment-preview",
         :type => "button" %>
-
+      <% if !comment.parent_comment_short_id.present? %>
+        <span class="learning_summary_checkbox">
+          <%= check_box_tag "is_learning_summary", value = '1', checked = comment.is_learning_summary %>
+          <%= label_tag "is_learning_summary", "Learning Summary" %>
+        </span>
+      <% end %>
       <div style="clear: both;"></div>
 
       <%= render :partial => "global/markdownhelp" %>
