--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,7 +96,7 @@
       </div>
     </div>
   </div>
-  <% if ENV['RAILS_ENV'] = "production" %>
+  <% if ENV['RAILS_ENV'] == "production" %>
     <script type="text/javascript">var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-347532-8"]);_gaq.push(["_trackPageview"]);(function(){var b=document.createElement("script");b.type="text/javascript";b.async=true;b.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(b,a)})();</script>
   <% end %>
 </body>
