--- a/app/views/comments/_commentbox.html.erb
+++ b/app/views/comments/_commentbox.html.erb
@@ -29,7 +29,7 @@
       <% if !comment.parent_comment_short_id.present? %>
         <span class="learning_summary_checkbox">
           <%= check_box_tag "is_learning_summary", value = '1', checked = comment.is_learning_summary %>
-          <%= label_tag "is_learning_summary", "Learning Summary" %>
+          <%= label_tag "is_learning_summary", "Learning Summary" %> <a href="#" rel="popover" data-content="Learning summaries are comments that summarize lessons learnt from the posted link. These summaries allow members to contribute context, tl;drs and background information to the AN community." data-original-title="What are learning summaries?">(?)</a>
         </span>
       <% end %>
       <div style="clear: both;"></div>
